--- a/BANN_R/README
+++ b/BANN_R/README
@@ -3,7 +3,7 @@ R >= 3.6.1
 
 Installation:
 1. Unzip the BANN.zip
-2. cd into BANN and install the package with "R CMD INSTALL BANN_0.1.0.tar.gz"
+2. cd into the BANN directory and install the package with "R CMD INSTALL BANN_0.1.0.tar.gz"
 
-Usage:
-For usage, please follow the BANN_example.R code to see how to run BANN with the toy example data provided.
+Example:
+For usage, please follow the BANN_example.R code to see how to run BANN with the toy dataset provided.
